Updated build receipes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,25 +20,23 @@ include_directories(${FREETYPE_INCLUDE_DIRS})
 find_package(PNG REQUIRED)
 include_directories(${PNG_INCLUDE_DIRS})
 
-add_library(${PROJECT_NAME} OBJECT ${SOURCES})
+if (LIBFB_SHARED)
+    add_library(${PROJECT_NAME} SHARED ${SOURCES})
+else()
+    add_library(${PROJECT_NAME} STATIC ${SOURCES})
+endif()
+
+install(TARGETS ${PROJECT_NAME} DESTINATION lib)
 set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE 1)
-add_library(${PROJECT_NAME}_shared SHARED $<TARGET_OBJECTS:${PROJECT_NAME}>)
-add_library(${PROJECT_NAME}_static STATIC $<TARGET_OBJECTS:${PROJECT_NAME}>)
 set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER include/wifi_setup.h)
-set_target_properties(${PROJECT_NAME}_shared PROPERTIES OUTPUT_NAME "${PROJECT_NAME}")
-set_target_properties(${PROJECT_NAME}_static PROPERTIES OUTPUT_NAME "${PROJECT_NAME}")
-install(TARGETS ${PROJECT_NAME}_static DESTINATION lib)
-install(TARGETS ${PROJECT_NAME}_shared DESTINATION lib)
-
-#export(TARGETS ${PROJECT_NAME}_shared ${PROJECT_NAME}_static FILE libfb-exports.cmake)
 
 if (BUILD_TEST)
    file(GLOB TEST_SOURCES "tests/*.cpp")
    add_executable(${PROJECT_NAME}_test ${SOURCES} ${TEST_SOURCES})
    include_directories(${PROJECT_NAME}_test "include")
 
-   target_link_libraries (${PROJECT_NAME}_test ${PROJECT_NAME}_static)
+   target_link_libraries (${PROJECT_NAME}_test ${PROJECT_NAME})
    target_link_libraries(${PROJECT_NAME}_test ${FREETYPE_LIBRARIES})
    target_link_libraries(${PROJECT_NAME}_test ${PNG_LIBRARIES})
    target_link_libraries(${PROJECT_NAME}_test ${CMAKE_THREAD_LIBS_INIT})
