--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,25 +2,13 @@ cmake_minimum_required(VERSION 3.5)
 project(fb VERSION 1.0 LANGUAGES C CXX)
 set(CMAKE_CXX_STANDARD 11)
 
-if (TARGET_DEVICE)
-  set(CMAKE_BUILD_TYPE Release)
-  add_definitions(-DTARGET_DEVICE)
-endif()
-
 find_package(PkgConfig)
-
-file(GLOB SOURCES "${CMAKE_CURRENT_LIST_DIR}/include/*.cpp")
-file(GLOB INCLUDES "${CMAKE_CURRENT_LIST_DIR}/include/*.h")
-
-include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
-
-find_package(Threads)
-
 find_package(Freetype REQUIRED)
-include_directories(${FREETYPE_INCLUDE_DIRS})
 
 find_package(PNG REQUIRED)
-include_directories(${PNG_INCLUDE_DIRS})
+
+file(GLOB SOURCES "${CMAKE_CURRENT_LIST_DIR}/src/*.cpp")
+file(GLOB HEADERS "${CMAKE_CURRENT_LIST_DIR}/include/*.h")
 
 if (LIBFB_SHARED)
     add_library(${PROJECT_NAME} SHARED ${SOURCES})
@@ -28,21 +16,38 @@ else()
     add_library(${PROJECT_NAME} STATIC ${SOURCES})
 endif()
 
+set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
+
+set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE 1)
+set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
+set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER HEADERS)
+
+INSTALL(TARGETS ${PROJECT_NAME} 
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        PUBLIC_HEADER DESTINATION include
+)
+
+
+include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
+include_directories(${CMAKE_CURRENT_LIST_DIR}/include)
+include_directories(${FREETYPE_INCLUDE_DIRS})
+include_directories(${PNG_INCLUDE_DIRS})
+
 install(TARGETS ${PROJECT_NAME} DESTINATION lib)
 set_property(TARGET ${PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE 1)
 set_target_properties(${PROJECT_NAME} PROPERTIES SOVERSION 1)
-set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER include/wifi_setup.h)
-
 
 
 if (BUILD_TEST)
-   file(GLOB TEST_SOURCES "tests/*.cpp")
-   add_executable(${PROJECT_NAME}_test ${SOURCES} ${TEST_SOURCES})
-   include_directories(${PROJECT_NAME}_test "include")
+    find_package(Threads REQUIRED)
+    file(GLOB TEST_SOURCES "tests/*.cpp")
+    add_executable(${PROJECT_NAME}_test ${TEST_SOURCES})
+    include_directories(${PROJECT_NAME}_test "include")
 
-   target_link_libraries (${PROJECT_NAME}_test qrencode)  
-   target_link_libraries (${PROJECT_NAME}_test ${PROJECT_NAME})
-   target_link_libraries(${PROJECT_NAME}_test ${FREETYPE_LIBRARIES})
-   target_link_libraries(${PROJECT_NAME}_test ${PNG_LIBRARIES})
-   target_link_libraries(${PROJECT_NAME}_test ${CMAKE_THREAD_LIBS_INIT})
+    target_link_libraries (${PROJECT_NAME}_test qrencode)
+    target_link_libraries (${PROJECT_NAME}_test ${PROJECT_NAME})
+    target_link_libraries(${PROJECT_NAME}_test ${FREETYPE_LIBRARIES})
+    target_link_libraries(${PROJECT_NAME}_test ${PNG_LIBRARIES})
+    target_link_libraries(${PROJECT_NAME}_test ${CMAKE_THREAD_LIBS_INIT})
 endif()
